Distributed systems: single StatiSystem with actor inner systems can be created and deployed over two actor systems. However, as far as Contacts are not serializable yet, the communication between the systems is impossible.